<resources>
    <string name="cwac_richedittext_bold">Bold</string>
    <string name="cwac_richedittext_italic">Italic</string>
    <string name="cwac_richedittext_underline">Underline</string>
    <string name="cwac_richedittext_strikethrough">Strikethrough</string>
    <string name="cwac_richedittext_superscript">Superscript</string>
    <string name="cwac_richedittext_subscript">Subscript</string>
    <string name="cwac_richedittext_sans">Sans Serif</string>
    <string name="cwac_richedittext_serif">Serif</string>
    <string name="cwac_richedittext_mono">Monospace</string>
    <string name="cwac_richedittext_effects">Effects</string>
    <string name="cwac_richedittext_fonts">Fonts</string>
    <string name="cwac_richedittext_format">Format</string>
    <string name="cwac_richedittext_lines">Lines</string>
    <string name="cwac_richedittext_normal">Normal</string>
    <string name="cwac_richedittext_center">Center</string>
    <string name="cwac_richedittext_opposite">Opposite</string>
    <string name="cwac_richedittext_grow">Grow</string>
    <string name="cwac_richedittext_shrink">Shrink</string>
    <string name="cwac_richedittext_size">Size</string>
    <string name="cwac_richedittext_color">Color</string>
    <string name="cwac_richedittext_foreground">Foreground</string>
    <string name="cwac_richedittext_background">Background</string>
</resources>
